# satnogs-signal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: mirror.yml
satnogs_signal/data/: audit.py  build_dataset.py  splits.py
satnogs_signal/model/: baseline.py  data.py  evaluate.py  inference.py  metrics.py  train.py
satnogs_signal/service/: dashboard.py  poller.py  store.py
satnogs_signal/shared/: config.py  images.py  labels.py  satnogs_api.py
scripts/: audit.py  build_and_push.py  inspect_waterfalls.py  run_poller.py  train_and_eval.py
