[project]
name = "satnogs-signal"
version = "0.1.0"
description = "Signal-vs-noise classification for SatNOGS waterfall observations"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "datasets>=2.18",
    "huggingface_hub>=0.23",
    "numpy>=1.24",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers>=4.40",
    "accelerate>=1.1.0",
    "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["satnogs_signal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: model training / network tests, deselect with -m 'not slow'"]
