[project]
name = "satnogs-signal"
version = "0.1.0"
description = "Signal-vs-noise classification for SatNOGS waterfall observations"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "Pillow>=10.0",
    "numpy>=1.24",
    "torch>=2.2",
    "torchvision>=0.17",
    "transformers==5.14.1",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["satnogs_signal*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = ["slow: network / live-model-load tests, deselect with -m 'not slow'"]
